--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.3.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "4.0.3",
+    "react-table": "^7.6.3",
+    "styled-components": "^4.4.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
